# struggle

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
redist/shaders/: shaders.hlsl
shaders/: shaders.hlsl
src/: app.rs  main.rs  timer.rs
src/gi/: adapter.rs  buffers.rs  context.rs  misc.rs  mod.rs  utils.rs
src/hal/: adapter.rs  buffers.rs  context.rs  cx.rs  misc.rs  mod.rs  shared.rs  swaochain.rs
