[package]
name = "test_dx11"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.8", default-features = false, features = ["rwh_06"] }

[dependencies.windows]
version = "0.59.0"
default-features = false
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
]
